--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,5 @@
-{{page-title "OddsCalculator"}}
-
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<div class="page">
+  <h1>Western States Odds Predictor</h1>
+  <OddsSetter />
+  {{outlet}}
+</div>
