make mobile slightly better

--- a/app/components/odds-display.hbs
+++ b/app/components/odds-display.hbs
@@ -1,1 +1,3 @@
-<canvas {{chart this.config}} class="lottery-trends"></canvas>
+<div class="lottery-trends">
+<canvas {{chart this.config}}></canvas>
+</div>
