--- a/app/components/odds-maker.hbs
+++ b/app/components/odds-maker.hbs
@@ -6,12 +6,12 @@
         <tr>
           <th>Years</th>
           <th>Applicants</th>
-          <th>Tickets/Applicant</th>
-          <th>Total Tickets</th>
+          <th>Tickets/<br>Applicant</th>
+          <th>Total<br>Tickets</th>
           <th>Odds</th>
-          <th>Waitlist Odds<3,/th>
-          <th>Combined Odds</th>
-          <th>Expected Entrants</th>
+          <th>Waitlist<br>Odds<3,/th>
+          <th>Combined<br>Odds</th>
+          <th>Expected<br>Entrants</th>
         </tr>
       </thead>
       <tbody>
