--- a/app/components/odds-maker.hbs
+++ b/app/components/odds-maker.hbs
@@ -30,14 +30,14 @@
       </tbody>
       <tfoot>
         <tr>
-          <th>Years ({{y.groups.length}})</th>
-          <th>Applicants ({{y.totalApplicants}})</th>
-          <th>Tickets/Applicant ({{y.avgTickets}} avg)</th>
-          <th>Total Tickets ({{y.totalTickets}})</th>
-          <th>Odds</th>
-          <th>Waitlist Odds</th>
-          <th>Combined Odds</th>
-          <th>Expected Entrants</th>
+          <th>Totals</th>
+          <th>{{y.totalApplicants}}</th>
+          <th>{{y.avgTickets}} avg</th>
+          <th>{{y.totalTickets}}</th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th>{{y.expectedEntrants}}</th>
         </tr>
       </tfoot>
     </table>
