only reverse lower bit

--- a/app/components/odds-setter.hbs
+++ b/app/components/odds-setter.hbs
@@ -14,4 +14,4 @@
   </form>
 </div>
 <OddsDisplay @model={{this.model}} />
-<OddsMaker @model={{this.model}} />
+<OddsMaker @model={{this.reversed}} />
