--- a/app/components/odds-setter.hbs
+++ b/app/components/odds-setter.hbs
@@ -5,6 +5,7 @@
     <label>YOY Growth: <input type="number" min="0" step="0.01" max="1" value={{this.growthRate}} {{on "input" (fn this.updateFloat "growthRate")}}/></label>
     <label>Draws: <input type="number" min="0" step="1" max="10000" value={{this.draws}} {{on "input" (fn this.updateInt "draws")}}/></label>
     <label>Waitlist Draws: <input type="number" min="0" step="1" max="10000" value={{this.waitlistDraws}} {{on "input" (fn this.updateInt "waitlistDraws")}}/></label>
+    <label>Max Applicants: <input type="number" min="0" step="1000" max="1000000" value={{this.maxApplicants}} {{on "input" (fn this.updateInt "maxApplicants")}}/></label>
     <label>Odds Of Entry From Waitlist: <input type="number" min="0" step=".01" max="1" value={{this.waitlistFactor}} {{on "input" (fn this.updateFloat "waitlistFactor")}}/></label>
     <label>Attrition<input type="string" value={{this.attrition}} {{on "input" (fn this.updateArr "attrition")}}/></label>
     <label>Default Attrition<input type="number" min="0" step=".01" max="1" value={{this.defaultAttrition}} {{on "input" (fn this.updateFloat "defaultAttrition")}}/></label>
