--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,7 +1,9 @@
-body {
+html {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
   font-size: 125%;
+}
+body {
   background: #000;
   color: #bbb;
   margin: 0;
@@ -11,14 +13,18 @@ body {
   font-size: 0.75rem;
   width: calc(100vw - 2em);
   padding: 1em;
-  margin: 0 auto;
+  margin: 0;
   position: relative;
+  height: 100%;
 }
 .year {
+  position: relative;
+  width: calc(100vw - 4em);
   margin: 0 0 2rem 0;
   padding: 1em;
   border-radius: 0.2em;
   background: #222;
+  min-height: 500px;
 }
 
 h1 {
@@ -33,8 +39,19 @@ h2 {
 }
 
 table {
+  position: relative;
   border-collapse: collapse;
+  table-layout: fixed;
   width: 100%;
+}
+
+table.year-data th,
+table.year-data td {
+  width: 12%;
+}
+table.year-data th:first-of-type,
+table.year-data td:first-of-type {
+  width: 4%;
 }
 th {
   color: #eee;
@@ -44,6 +61,12 @@ th {
 td {
   font-weight: 300;
   text-align: left;
+  overflow: hidden;
+}
+tr,
+th,
+td {
+  height: 1.1em;
 }
 tr:nth-of-type(even) {
   background-color: rgba(200, 255, 255, 0.2);
