add historical data trends

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,7 @@
 <div class="page">
   <h1>Western States Odds Predictor</h1>
+  <h2>Historical Data (2015-2025)</h2>
+  <TrendDisplay />
   <OddsSetter />
   {{outlet}}
 </div>
