--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -79,8 +79,12 @@ tr:nth-of-type(even) {
 .lottery-trends {
   background: #333;
   width: 100%;
-  height: 50vh;
+  height: 40vh;
   margin: 2em 0;
+}
+
+.lottery-trends.historical {
+  height: 35vh;
 }
 
 @media (max-width: 600px) {
